Add option to hide sensitive bot posts on public timelines

--- a/app/javascript/mastodon/locales/en-GB.json
+++ b/app/javascript/mastodon/locales/en-GB.json
@@ -133,6 +133,7 @@
   "community.column_settings.local_only": "Local only",
   "community.column_settings.media_only": "Media Only",
   "community.column_settings.hide_bots": "Hide Bot Posts",
+  "community.column_settings.hide_sensitive_bots": "Hide Sensitive Bot Posts",
   "community.column_settings.remote_only": "Remote only",
   "compose.language.change": "Change language",
   "compose.language.search": "Search languages...",
